format crete profile, profile edit, user profile, recipe_add

--- a/members/templates/profile/user_profile.html
+++ b/members/templates/profile/user_profile.html
@@ -13,13 +13,12 @@
             <div class="card mb-3">
                 <div class="row no-gutters">
                     <!-- The Profile image URL -->
-                    <div class="col-12 col-sm-3 offset-sm-0">
+                    <div class="col-12 col-sm-3 offset-sm-0 text-center">
                         {% if "profile_img" in page_user.profile_pic.url %}
                         <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1681317396/profile_img.png"
-                            width="100%" class="rounded-circle rounded-sm border-success">
+                            width="120" class="rounded-circle rounded-sm border-success">
                         {% else %}
-                        <img src="{{ page_user.profile_pic.url }}"
-                            width="100%" class="rounded-circle shadow">
+                        <img src="{{ page_user.profile_pic.url }}" width="120" class="rounded-circle shadow">
 
                         {% endif %}
                         <br>
@@ -32,31 +31,32 @@
                             <h3 class="card-title">{{ page_user }}'s Profile</h3>
                             <hr>
                             <h4 class="card-title">{{ page_user.user.first_name }} {{ page_user.user.last_name }}</h4>
-                            <!-- Bio goes here -->                            
+                            <!-- Bio goes here -->
                             {% if page_user.bio %}
-                                <p class="card-text">{{ page_user.bio }}</p><hr>
+                            <p class="card-text">{{ page_user.bio }}</p>
+                            <hr>
                             {% endif %}
                             <!-- Social Links go here -->
                             {% if page_user.website_url %}
-                                <a class="card-text" href="{{ page_user.website_url }}">
+                            <a class="card-text" href="{{ page_user.website_url }}">
                                 <small><i class="fa-solid fa-globe"></i> Website</small></a>
                             {% endif %}
                             {% if page_user.facebook_url %}
-                                <span> | </span><a class="card-text" href="{{ page_user.facebook_url }}">
+                            <span> | </span><a class="card-text" href="{{ page_user.facebook_url }}">
                                 <small><i class="fa-brands fa-facebook"></i> Facebook</small></a>
                             {% endif %}
                             {% if page_user.twitter_url %}
-                                <span> | </span><a class="card-text" href="{{ page_user.twitter_url }}">
+                            <span> | </span><a class="card-text" href="{{ page_user.twitter_url }}">
                                 <small> <i class="fa-brands fa-twitter"></i> Twitter</small></a>
                             {% endif %}
                             {% if page_user.instagram_url %}
-                                <span> | </span><a class="card-text" href="{{ page_user.instagram_url }}">
-                                <small> <i class="fa-brands fa-instagram"></i> Instagram </small></a> 
+                            <span> | </span><a class="card-text" href="{{ page_user.instagram_url }}">
+                                <small> <i class="fa-brands fa-instagram"></i> Instagram </small></a>
                             {% endif %}
                             {% if page_user.pintrest_url %}
-                                <span> | </span><a class="card-text" href="{{ page_user.pintrest_url }}">
+                            <span> | </span><a class="card-text" href="{{ page_user.pintrest_url }}">
                                 <small><i class="fa-brands fa-pinterest"></i> Pinterest</small></a>
-                            {% endif %}                            
+                            {% endif %}
                         </div>
                     </div>
                 </div>
@@ -64,14 +64,15 @@
         </div>
     </div>
     {% if page_user.id == user.id %}
-        <a href="{% url 'edit-profile-page' user.pk %}" class="btn btn-outline-success col-10 offset-1 col-sm-3 offset-sm-4">Edit Bio & Social Links</a>
-        <a href="{% url 'edit-profile' %}" class="btn btn-outline-success col-10 offset-1 col-sm-3 offset-sm-0 ">Edit Profile Settings</a>
+    <a href="{% url 'edit-profile-page' user.pk %}"
+        class="btn btn-outline-success col-10 offset-1 col-sm-3 offset-sm-4 mb-2">Edit Bio & Social Links</a>
+    <a href="{% url 'edit-profile' %}" class="btn btn-outline-success col-10 offset-1 col-sm-3 offset-sm-0 mb-2">Edit
+        Profile Settings</a>
     {% endif %}
-    <br>
-    <br>
-    <div class="gx-2">
-        <a href="{% url 'recipe-mylist' %}" class=" btn col-10 offset-1  col-sm-3 offset-sm-4 btn-outline-success ">Back to Your Recipes</a>
-        <a href="{% url 'blog' %}" class="btn col-10 offset-1 col-sm-3 offset-sm-0 btn-outline-success">Back to Blog</a>
+    <div class="gap-2">
+        <a href="{% url 'recipe-mylist' %}" class=" btn col-10 offset-1 col-sm-3 offset-sm-4 btn-outline-success mb-2">Back
+            to Your Recipes</a>
+        <a href="{% url 'blog' %}" class="btn col-10 offset-1 col-sm-3 offset-sm-0 btn-outline-success mb-2">Back to Blog</a>
     </div>
 </div>
 {% endblock content %}
