--- a/templates/recipe_update.html
+++ b/templates/recipe_update.html
@@ -16,28 +16,19 @@
     <small>By: {{ recipe.author }}</small><br>
     <small>Last Updated: {{ recipe.updated_date }}</small>
     <hr>
-
     <br>
     <form action="" method="POST" enctype="multipart/form-data">
-
         {% csrf_token %}
         {{ form.media }}
-
         {{ form | crispy }}
-
         <br>
         <a href="{% url 'recipe-mylist' %}" class="btn btn-sm btn-outline-success">Back</a>
         <a href="{% url 'recipes' %}" class="btn btn-sm btn-outline-success">Home</a>
         <input type="submit" value="Update" class="btn btn-sm btn-outline-success">
-
     </form>
-
 </div>
-
 {% else %}
-<center>
-    <h1>You're not logged in!</h1>
-</center>
+<h1 class="text-center">You're not logged in!</h1>
 {% endif %}
 
 {% endblock content %}
