removed template files

--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -10,7 +10,7 @@
     <div class="col-10 offset-1 col-lg-8 offset-lg-2 text-center top-slogan">
         <h4 class="">Cooking Time Is My Favorite Time <i class="far fa-heart"></i></h4>
         <hr>
-        <h5>Shemmylicious Food Recipesxxxxx</h5>
+        <h5>Shemmylicious Food Recipes</h5>
         <p>Here's where you can find ingridients, instructions and other details of your Shemmylicious recipe. <br>
             Be sure to sign up to be able to comment and like my posts as well as create your own recipes.</p>
         <hr>
