--- a/members/templates/registration/password_change.html
+++ b/members/templates/registration/password_change.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Change Password{% endblock %}
-{% block content %}
+{% load static %}
 {% load crispy_forms_tags %}
+
+{% block content %}
 
 <div class="container">
     <div class="row">
@@ -16,6 +18,7 @@
         <div class="col-10 offset-1 col-md-8 offset-md-2">
             <form class="form-group">
                 {% csrf_token %}
+
                 {{ form | crispy }}
                 
                 <br>
