--- a/static/css/style.css
+++ b/static/css/style.css
@@ -219,13 +219,14 @@ a {
     bottom: 5%;
     left: 50%;
     transform: translate(-50%, -50%);
+
 }
 
 .headline-bttn {
     min-width: 200px;
-    height: 40px;
+    height: 30px;
     background-color: #9a99a2bd;
-    padding: 10% 0;
+    padding: 10%;
     color: white;
     font-size: 120%;
     font-weight: bold;
