added missing alt atr to img

--- a/members/templates/registration/edit_profile.html
+++ b/members/templates/registration/edit_profile.html
@@ -14,10 +14,10 @@
                 <div class="row no-gutters">
                     <div class="col-10 offset-1 col-sm-4 offset-sm-0">
                         {% if "profile_img" in user.profile.profile_pic.url %}
-                        <img src="{% static 'images/profile_img.png' %}"
+                        <img src="{% static 'images/profile_img.png' %}" alt="profile image"
                             width="100" class="rounded-circle rounded-sm border-success">
                         {% else %}
-                        <img src="{{ user.profile.profile_pic.url }}" 
+                        <img src="{{ user.profile.profile_pic.url }}" alt="profile image"
                             width="100" class="rounded-circle shadow">
                         {% endif %}
                     </div>
