added aria to bttns

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -452,16 +452,12 @@ img {
     padding: 0 5px;
 }
 
-.author {
-    color: white;
-    margin: 4px;
-    text-transform: uppercase;
-}
-
+.author,
 .category {
     color: white;
     margin: 4px;
     text-transform: uppercase;
+    font-weight: bold;
 }
 
 .card-blog-title {
