last html formating

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -529,6 +529,10 @@ img {
     overflow: hidden;
 }
 
+.masthead-image img {
+    width: 100%;
+}
+
 .masthead-image:after {
     content: "";
     position: absolute;
