--- a/templates/recipe_update.html
+++ b/templates/recipe_update.html
@@ -17,7 +17,7 @@
     <small>Last Updated: {{ recipe.updated_date }}</small>
     <hr>
     <br>
-    <form action="" method="POST" enctype="multipart/form-data">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.media }}
         {{ form | crispy }}
