--- a/templates/recipe_add.html
+++ b/templates/recipe_add.html
@@ -22,7 +22,7 @@
     <br>
     <h3>Add Recipe</h3>
     <br>
-    <form action="" method="POST" enctype="multipart/form-data">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
 
         {{ form | crispy }}
