--- a/templates/recipe_blog.html
+++ b/templates/recipe_blog.html
@@ -28,24 +28,22 @@
                 <div class="row">
                     <!-- Duplicated like and comment section -->
                     <div class="col-2 offset-1 text-center">
-                        <strong>
-                            {% if user.is_authenticated %}
-                            <form class="d-inline" action="{% url 'recipe_like' post.slug %}" method="POST">
-                                {% csrf_token %}
-                                {% if liked %}
-                                <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i
-                                        class="fas fa-heart"></i></button>
-                                {% else %}
-                                <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i
-                                        class="far fa-heart"></i></button>
-                                {% endif %}
-                            </form>
+                        {% if user.is_authenticated %}
+                        <form class="d-inline" action="{% url 'recipe_like' post.slug %}" method="POST">
+                            {% csrf_token %}
+                            {% if liked %}
+                            <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"
+                                aria-label="like button"><i class="fas fa-heart"></i></button>
                             {% else %}
-                            <span class="text-secondary"><i class="far fa-heart"></i></span>
+                            <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"
+                                aria-label="like button"><i class="far fa-heart"></i></button>
                             {% endif %}
-                            <!-- The number of likes goes before the closing strong tag -->
-                            <span class="text-secondary">{{ post.number_of_likes }} </span>
-                        </strong>
+                        </form>
+                        {% else %}
+                        <span class="text-secondary"><i class="far fa-heart"></i></span>
+                        {% endif %}
+                        <!-- The number of likes goes before the closing strong tag -->
+                        <span class="text-secondary">{{ post.number_of_likes }} </span>
                     </div>
                     <div class="col-2 text-center">
                         {% with comments.count as total_comments %}
@@ -59,9 +57,10 @@
             <div class="d-none d-md-block col-md-6 masthead-image">
                 <!-- The featured image URL goes in the src attribute -->
                 {% if "recipe" in post.featured_image.url %}
-                <img src="https://asset.cloudinary.com/dteyj4llb/f6e04f3ac88f266da941b472675fd64c" width="100">
+                <img src="https://asset.cloudinary.com/dteyj4llb/f6e04f3ac88f266da941b472675fd64c" width="100"
+                    alt="featured image">
                 {% else %}
-                <img src="{{ post.featured_image.url }}" width="100">
+                <img src="{{ post.featured_image.url }}" width="100" alt="featured image">
                 <br>
                 {% endif %}
             </div>
@@ -90,20 +89,17 @@
             <div class="card-body">
                 <!-- We want a for loop inside the tags to iterate through each comment in comments -->
                 {% for comment in comments %}
-
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="comments" style="padding: 10px;">
                         <div class="row g-0">
-                            <div class="col-md-2">
-                                <center>
-                                    {% if comment.post_user_id.profile.profile_pic %}                                
-                                    <img src="{{ comment.post_user_id.profile.profile_pic.url }}" 
-                                        class="img-fluid rounded-start" alt="Profiel picture">
-                                    {% else %}
-                                    <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1681317396/profile_img.png" 
-                                        class="img-fluid rounded-start" alt="Default profiel picture">
-                                    {% endif %}
-                                </center>
+                            <div class="col-md-2 text-center">
+                                {% if comment.post_user_id.profile.profile_pic %}
+                                <img src="{{ comment.post_user_id.profile.profile_pic.url }}"
+                                    class="img-fluid rounded-start" alt="Profiel picture">
+                                {% else %}
+                                <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1681317396/profile_img.png"
+                                    class="img-fluid rounded-start" alt="Default profiel picture">
+                                {% endif %}
                             </div>
                             <div class="col-md-10">
                                 <!-- The body of the comment goes before the | -->
@@ -124,9 +120,9 @@
                     </div>
                     <!-- Additional Options as a Superuser -->
                     {% if  user.is_superuser %}
-
-                    <a href="{% url 'comment-delete' comment.pk %}" class="btn btn-sm col-10 offset-1 col-sm-5 offset-sm-1 btn-outline-danger"><span>Delete Comment</span></a>
-                    
+                    <a href="{% url 'comment-delete' comment.pk %}"
+                        class="btn btn-sm col-10 offset-1 col-sm-5 offset-sm-1 btn-outline-danger"><span>Delete
+                            Comment</span></a>
                     {% endif %}
                 </div>
                 <hr>
@@ -143,17 +139,17 @@
                     {{ user.username }}, Your comment is awaiting approval.
                 </div>
                 {% else %}
-
                 {% if user.is_authenticated %}
-                    <h3>Leave a comment:</h3>
-                    <p>Posting as: {{ user.username }}</p>
-                    <form method="post" style="margin-top: 1.3em;">
-                        {{ comment_form | crispy }}
-                        {% csrf_token%}
-                        <br>
-                        <button type="submit" class="btn d-grid gap-2 col-12 mx-auto btn-sm btn-outline-success">Submit</button>
-                        <div style="height: 100px;"></div>
-                    </form>
+                <h3>Leave a comment:</h3>
+                <p>Posting as: {{ user.username }}</p>
+                <form method="post" style="margin-top: 1.3em;">
+                    {{ comment_form | crispy }}
+                    {% csrf_token%}
+                    <br>
+                    <button type="submit" class="btn d-grid gap-2 col-12 mx-auto btn-sm btn-outline-success" 
+                        aria-label="submit button">Submit</button>
+                    <div style="height: 100px;"></div>
+                </form>
                 {% endif %}
                 {% endif %}
             </div>
@@ -162,7 +158,8 @@
     <hr>
     <div class="gap-2">
         <a href="{% url 'blog' %}" class="btn col-10 offset-1 col-lg-2 offset-lg-4 btn-outline-success">Back to Blog</a>
-        <a href="{% url 'recipes' %}" class="btn col-10 offset-1 col-lg-2 offset-lg-0 btn-outline-success">Back to Recipes</a>
+        <a href="{% url 'recipes' %}" class="btn col-10 offset-1 col-lg-2 offset-lg-0 btn-outline-success">Back to
+            Recipes</a>
     </div>
 </div>
 
