--- a/templates/recipe_add.html
+++ b/templates/recipe_add.html
@@ -15,8 +15,8 @@
     <h5 class="text-center">Your Recipe was Submitted Succesfully, {{ user }}!</h5>
     <br>
     <br>
-    <a href="{% url 'recipes' %}" class="btn btn-outline-success">Back</a>
-    <a href="{% url 'recipe-mylist' %}" class="btn btn-outline-success">My Recipes</a>
+    <a href="{% url 'recipes' %}" class="btn btn-outline-success col-5 offset-1 md-2">Back</a>
+    <a href="{% url 'recipe-mylist' %}" class="btn btn-outline-success col-5 md-2">My Recipes</a>
     {% else %}
     <br>
     <br>
